--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.goldn.diggr"
+        applicationId "com.comuts"
         minSdk 24
         targetSdk 32
         versionCode 1
